# ai-agent

./: 404.html  app.py  contrato.py  create_tbl.sql  database.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: index.md
search/: search_index.json
